# Copyright (c) 2018 Bart Massey
# [This program is licensed under the "MIT License"]
# Please see the file LICENSE in the source
# distribution of this software for license terms.

[package]
name = "popcount"
version = "0.0.1"
authors = [ "Bart Massey <bart@cs.pdx.edu>" ]
license-file = "LICENSE"

[[bin]]
name = "popcount_rs"
path = "popcount.rs"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3

[dependencies]
lazy_static = "*"
